[gd_scene load_steps=8 format=3 uid="uid://diik6yu1p45la"]

[ext_resource type="Script" uid="uid://dw0h07mpcs4yd" path="res://map_drawer.gd" id="1_1bvp3"]
[ext_resource type="Script" uid="uid://bjtpxciak2dkw" path="res://exporter_json.gd" id="1_272bh"]
[ext_resource type="Script" uid="uid://c3tpvmmj8chp8" path="res://details_panel.gd" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://duvh3suw0rqlu" path="res://drawer_entry.tscn" id="2_1bvp3"]
[ext_resource type="Script" uid="uid://cgpnelrpwhceo" path="res://create_new_data_panel.gd" id="3_h2yge"]
[ext_resource type="Script" uid="uid://bd6cded5elrip" path="res://map_matrix_container.gd" id="4_272bh"]
[ext_resource type="PackedScene" uid="uid://213xvopfalw1" path="res://map_matrix_entry.tscn" id="5_7mycd"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Exporter" type="Node" parent="."]
script = ExtResource("1_272bh")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Drawer" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
script = ExtResource("1_1bvp3")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Drawer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExportOptions" type="PanelContainer" parent="HBoxContainer/Drawer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Drawer/VBoxContainer/ExportOptions"]
layout_mode = 2

[node name="ImportButton" type="Button" parent="HBoxContainer/Drawer/VBoxContainer/ExportOptions/HBoxContainer"]
layout_mode = 2
text = "Import JSON"

[node name="ExportButton" type="Button" parent="HBoxContainer/Drawer/VBoxContainer/ExportOptions/HBoxContainer"]
layout_mode = 2
text = "Export JSON"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Drawer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer/Drawer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Entry" parent="HBoxContainer/Drawer/VBoxContainer/ScrollContainer/HFlowContainer" instance=ExtResource("2_1bvp3")]
layout_mode = 2

[node name="DetailsPanel" type="Panel" parent="HBoxContainer/Drawer/VBoxContainer"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
script = ExtResource("2_0xm2m")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer"]
layout_mode = 2
text = "Editor display name:"

[node name="EDN_LineEdit" type="LineEdit" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer"]
layout_mode = 2
text = "Internal name:"

[node name="IN_LineEdit" type="LineEdit" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer"]
layout_mode = 2

[node name="PercentageField" type="Control" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label3" type="Label" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/PercentageField"]
layout_mode = 2
offset_top = 4.0
offset_right = 300.0
offset_bottom = 27.0
text = "Spawn percentage:"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/PercentageField"]
layout_mode = 2
offset_top = 30.0
offset_right = 300.0
offset_bottom = 61.0

[node name="PercSlider" type="HSlider" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/PercentageField/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="PercText" type="LineEdit" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/PercentageField/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
text = "100"
alignment = 2
emoji_menu_enabled = false
virtual_keyboard_enabled = false

[node name="Label" type="Label" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/PercentageField/HBoxContainer"]
layout_mode = 2
text = "%"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer"]
layout_mode = 2

[node name="DeleteDataBtn" type="Button" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Delete MapData"

[node name="DeleteDestBtn" type="Button" parent="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Delete destination"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapMatrixContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_272bh")

[node name="Entry" parent="HBoxContainer/VBoxContainer/ScrollContainer/MapMatrixContainer" instance=ExtResource("5_7mycd")]
layout_mode = 2

[node name="CreateNewDataPanel" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_h2yge")

[node name="DisplayInput" type="LineEdit" parent="HBoxContainer/VBoxContainer/CreateNewDataPanel"]
layout_mode = 2
placeholder_text = "Editor display name"

[node name="InternalInput" type="LineEdit" parent="HBoxContainer/VBoxContainer/CreateNewDataPanel"]
layout_mode = 2
placeholder_text = "Internal name (key)"

[node name="CreateDataButton" type="Button" parent="HBoxContainer/VBoxContainer/CreateNewDataPanel"]
layout_mode = 2
text = "+"

[node name="ExportFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
use_native_dialog = true

[node name="ImportFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")
use_native_dialog = true

[connection signal="pressed" from="HBoxContainer/Drawer/VBoxContainer/ExportOptions/HBoxContainer/ImportButton" to="Exporter" method="_on_import_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Drawer/VBoxContainer/ExportOptions/HBoxContainer/ExportButton" to="Exporter" method="_on_export_button_pressed"]
[connection signal="text_submitted" from="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/EDN_LineEdit" to="HBoxContainer/Drawer/VBoxContainer/DetailsPanel" method="_on_edn_line_edit_text_submitted"]
[connection signal="text_submitted" from="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/IN_LineEdit" to="HBoxContainer/Drawer/VBoxContainer/DetailsPanel" method="_on_in_line_edit_text_submitted"]
[connection signal="value_changed" from="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/PercentageField/HBoxContainer/PercSlider" to="HBoxContainer/Drawer/VBoxContainer/DetailsPanel" method="_on_perc_slider_value_changed"]
[connection signal="text_submitted" from="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/PercentageField/HBoxContainer/PercText" to="HBoxContainer/Drawer/VBoxContainer/DetailsPanel" method="_on_perc_text_text_submitted"]
[connection signal="pressed" from="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/HBoxContainer2/DeleteDataBtn" to="HBoxContainer/Drawer/VBoxContainer/DetailsPanel" method="_on_delete_data_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/Drawer/VBoxContainer/DetailsPanel/VBoxContainer/HBoxContainer2/DeleteDestBtn" to="HBoxContainer/Drawer/VBoxContainer/DetailsPanel" method="_on_delete_dest_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CreateNewDataPanel/CreateDataButton" to="HBoxContainer/VBoxContainer/CreateNewDataPanel" method="_on_create_data_button_pressed"]
[connection signal="file_selected" from="ExportFileDialog" to="Exporter" method="_on_export_file_dialog_file_selected"]
[connection signal="file_selected" from="ImportFileDialog" to="Exporter" method="_on_import_file_dialog_file_selected"]
